<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/folio_pisa"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/folio_pisa"
                android:textColor="@color/white"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/tecnico"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/tecnico"
                android:textColor="@color/white"
                android:padding="8dp" />

            <TextView
                android:id="@+id/contratista"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/contratista"
                android:textColor="@color/white"
                android:padding="8dp" />

            <TextView
                android:id="@+id/cope"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/Cope"
                android:textColor="@color/white"
                android:padding="8dp" />

            <TextView
                android:id="@+id/tecnologia"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/tecnologia"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/telefono"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/telefono"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tipo_tarea"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/tipo_tarea"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/fechaCordiApp"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/estatus_orden"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/estatus"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textAlignment="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
