<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/green">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/folio_pisa"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/tecnico"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/contratista"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/Cope"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/tecnologia"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/tipo_tarea"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/fechaCordiApp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/estatus"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
