<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dark_blue"
    tools:context=".Menu"
    android:fitsSystemWindows="true"
    android:id="@+id/main">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo"
                android:layout_centerHorizontal="true"
                app:layout_constraintBottom_toTopOf="@id/logoTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/logoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enlace_digital"
                android:textStyle="bold"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/light_green"/>
    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/botones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white" />

            <TextView
                android:id="@+id/tecnico"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintTop_toBottomOf="@id/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="25dp"
            app:layout_constraintTop_toBottomOf="@id/logoTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Botón para ver registros -->
            <ImageButton
                android:id="@+id/registered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/maletin"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/cute_green"
                android:padding="12dp"
                android:contentDescription="@string/ver"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>

            <!-- Botón para ingresar registro -->
            <ImageButton
                android:id="@+id/incompleted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/exclamacion"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/orange"
                android:padding="12dp"
                android:contentDescription="@string/agregar"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>

            <!-- Botón para comparar-->
            <ImageButton
                android:id="@+id/compare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/compare"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/light_blue"
                android:padding="12dp"
                android:contentDescription="@string/reportar"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>

            <!-- Botón para supongo reportar -->
            <ImageButton
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/energia"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/red"
                android:padding="12dp"
                android:contentDescription="@string/reportar"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

        </LinearLayout>

        <!-- Botón para iniciar sesión -->
        <TextView
            android:visibility="gone"
            android:id="@+id/problems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/problemas"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="14dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>