<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue">

            <TextView
                android:id="@+id/textPaso"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/paso_1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"/>

            <TextView
                android:id="@+id/textDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/textPaso"
                app:layout_constraintStart_toStartOf="@id/spinnerDivision"/>

            <Spinner
                android:id="@+id/spinnerDivision"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:background="@color/light_gray"
                app:layout_constraintTop_toBottomOf="@id/textDivision"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.9"/>

            <TextView
                android:id="@+id/textArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/spinnerDivision"
                app:layout_constraintStart_toStartOf="@id/spinnerDivision"/>

            <Spinner
                android:id="@+id/spinnerArea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:background="@color/light_gray"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/textArea"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.9"/>

            <TextView
                android:id="@+id/textCope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cope"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/spinnerArea"
                app:layout_constraintStart_toStartOf="@id/spinnerDivision"/>

            <Spinner
                android:id="@+id/spinnerCope"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:background="@color/light_gray"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/textCope"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.9"/>

            <TextView
                android:id="@+id/textDistrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distrito"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/spinnerCope"
                app:layout_constraintStart_toStartOf="@id/spinnerDivision"/>

            <EditText
                android:id="@+id/editDistrito"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:background="@color/light_gray"
                android:inputType="text"
                android:maxLength="7"
                app:layout_constraintTop_toBottomOf="@id/textDistrito"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.9"/>

            <TextView
                android:id="@+id/textTecnologia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tecnologia"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/editDistrito"
                app:layout_constraintStart_toStartOf="@id/spinnerDivision"/>

            <Spinner
                android:id="@+id/spinnerTecnologia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:background="@color/light_gray"
                app:layout_constraintTop_toBottomOf="@id/textTecnologia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.9"/>

            <TextView
                android:id="@+id/textEstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estatus"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/spinnerTecnologia"
                app:layout_constraintStart_toStartOf="@id/spinnerDivision"/>

            <Spinner
                android:id="@+id/spinnerEstatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:background="@color/light_gray"
                app:layout_constraintTop_toBottomOf="@id/textEstatus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.9"/>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                android:textColor="@color/white"
                android:background="@color/green"
                android:padding="12dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@+id/spinnerEstatus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
